Remove 'User Interaction' badge from BUDGIE In Action header

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -481,7 +481,7 @@
         <div class="architecture-container">
             <!-- BUDGIE In Action (formerly Layer 5: Interface & Reporting) -->
             <div class="layer">
-                <div class="layer-header centered"><span class="layer-title">BUDGIE In Action</span><span class="layer-badge">User Interaction</span></div>
+                <div class="layer-header centered"><span class="layer-title">BUDGIE In Action</span></div>
                 <div class="layer-media">
                     <img src="BUDGIE_AI_screen_rec_GIFd.gif" alt="BUDGIE in action screen recording" class="layer-media-img">
                 </div>
