Nudge 'Intelligent Planning Process Flow' upward (reduce top spacing)

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -238,7 +238,7 @@
             position: relative;
             width: 560px;
             height: 560px;
-            margin: 0 auto 10px;
+            margin: -10px auto 10px; /* Pull section upward slightly */
             border-radius: 50%;
             padding: 0;
         }
