--- a/Aiposter.html
+++ b/Aiposter.html
@@ -167,6 +167,22 @@
         .component-name { font-weight:600; margin-bottom:6px; color: var(--isu-blue); }
         .component-desc { font-size:0.9rem; color: #555; }
 
+    /* Comparison Section: ChatGPT vs. BUDGIE */
+    .comparison-section { background: var(--white); border-radius:20px; padding:24px; border:1px solid #ddd; margin:28px 0; box-shadow: var(--card-shadow); }
+    .comparison-header { text-align:center; font-size:1.6rem; color: var(--isu-blue); margin-bottom:8px; }
+    .comparison-subtitle { text-align:center; color:#555; margin-bottom:20px; font-size:0.95rem; }
+    .compare-wrapper { --pos:50%; position:relative; display:grid; grid-template-columns: var(--pos) calc(100% - var(--pos)); border:1px solid #e2e6ef; border-radius:14px; overflow:hidden; box-shadow:0 4px 14px rgba(0,20,84,0.08); }
+    .compare-pane { padding:18px; min-height:240px; }
+    .compare-pane.left { background:#f5f9ff; }
+    .compare-pane.right { background:#ffffff; }
+    .compare-title { font-weight:700; color: var(--isu-blue); margin-bottom:10px; font-size:1.05rem; }
+    .compare-list { margin:0; padding-left:18px; color:#444; font-size:0.9rem; }
+    .compare-list li { margin-bottom:6px; }
+    .compare-handle { position:absolute; top:0; bottom:0; left:var(--pos); width:4px; background: linear-gradient(to bottom, #001454, #0a3c86); transform:translateX(-50%); cursor: ew-resize; }
+    .compare-grip { position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:26px; height:26px; background:#0a3c86; border:2px solid #fff; border-radius:50%; box-shadow:0 4px 10px rgba(0,0,0,0.25); display:flex; align-items:center; justify-content:center; color:#fff; font-size:0.75rem; font-weight:600; letter-spacing:0.5px; }
+    .compare-range { width:100%; margin:16px 0 0; }
+    .compare-note { text-align:center; font-size:0.75rem; color:#666; margin-top:10px; }
+
         .agent-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:14px; }
         .agent-card { background: var(--white); padding:14px; border-radius:12px; border:1px solid #ddd; box-shadow: 0 4px 12px rgba(0, 20, 84, 0.08); transition: all 0.3s ease; }
         .agent-card:hover { transform: translateY(-4px); box-shadow: var(--card-shadow); }
@@ -537,6 +553,39 @@
 
         <!-- Process Flow (removed duplicate lower instance, single instance kept above) -->
 
+        <!-- Comparison: ChatGPT vs. BUDGIE -->
+        <div class="comparison-section" id="comparison">
+            <h2 class="comparison-header">ChatGPT vs. BUDGIE</h2>
+            <p class="comparison-subtitle">Slide to compare generic conversational output with domain-focused, structured mission planning intelligence.</p>
+            <div class="compare-wrapper" id="compareWrapper" style="--pos:50%">
+                <div class="compare-pane left">
+                    <div class="compare-title">ChatGPT Style Output</div>
+                    <ul class="compare-list">
+                        <li>General narrative descriptions</li>
+                        <li>High-level budgeting suggestions</li>
+                        <li>Limited temporal or cost structure</li>
+                        <li>No integrated risk quantification</li>
+                        <li>Manual extraction for reports</li>
+                    </ul>
+                </div>
+                <div class="compare-pane right">
+                    <div class="compare-title">BUDGIE Structured Output</div>
+                    <ul class="compare-list">
+                        <li>Parametric cost breakdown (phases, WBS)</li>
+                        <li>Embedded risk & variance indicators</li>
+                        <li>Multi-scenario budget differentials</li>
+                        <li>Cash flow + timeline alignment</li>
+                        <li>Export-ready financial artifacts</li>
+                    </ul>
+                </div>
+                <div class="compare-handle" id="compareHandle">
+                    <div class="compare-grip">⇆</div>
+                </div>
+            </div>
+            <input type="range" id="compareRange" class="compare-range" min="0" max="100" value="50" aria-label="Comparison slider">
+            <div class="compare-note">Drag the slider or the handle to reveal more of each side.</div>
+        </div>
+
         <!-- Key Performance Metrics -->
         <div class="metrics-dashboard">
             <div class="metric-card"><div class="metric-value">±5%</div><div class="metric-label">Cost Estimation Accuracy</div></div>
@@ -618,6 +667,35 @@
     }
 
     document.addEventListener('DOMContentLoaded', loadCharts);
+
+    // Comparison slider logic
+    document.addEventListener('DOMContentLoaded', () => {
+        const range = document.getElementById('compareRange');
+        const wrapper = document.getElementById('compareWrapper');
+        const handle = document.getElementById('compareHandle');
+        if (!range || !wrapper || !handle) return;
+        const setPos = (val) => wrapper.style.setProperty('--pos', val + '%');
+        setPos(range.value);
+        range.addEventListener('input', (e) => setPos(e.target.value));
+
+        // Drag the handle with mouse/touch
+        const onMove = (clientX) => {
+            const rect = wrapper.getBoundingClientRect();
+            let pct = ((clientX - rect.left) / rect.width) * 100;
+            pct = Math.max(0, Math.min(100, pct));
+            setPos(pct);
+            range.value = pct;
+        };
+        let dragging = false;
+        handle.addEventListener('mousedown', (e) => { dragging = true; e.preventDefault(); });
+        window.addEventListener('mousemove', (e) => { if (dragging) onMove(e.clientX); });
+        window.addEventListener('mouseup', () => { dragging = false; });
+        handle.addEventListener('touchstart', (e) => { dragging = true; });
+        window.addEventListener('touchmove', (e) => { if (dragging && e.touches[0]) onMove(e.touches[0].clientX); }, { passive: true });
+        window.addEventListener('touchend', () => { dragging = false; });
+        // Clicking anywhere on the wrapper sets position
+        wrapper.addEventListener('click', (e) => onMove(e.clientX));
+    });
     </script>
 </body>
 </html>
