--- a/Aiposter.html
+++ b/Aiposter.html
@@ -192,7 +192,7 @@
         .agent-functions li { margin-bottom:6px; padding-left:14px; position:relative; }
         .agent-functions li::before { content:'▸'; position:absolute; left:0; color: var(--isu-accent); }
 
-        .flow-diagram { background: var(--white); border-radius:14px; padding:20px; margin-top:28px; box-shadow: var(--card-shadow); }
+    .flow-diagram { background: var(--white); border-radius:14px; padding:16px 20px 20px; margin-top:14px; box-shadow: var(--card-shadow); }
         .flow-title { text-align:center; font-size:1.5rem; margin-bottom:16px; color: var(--isu-blue); }
         .purpose-intro { 
             display:block;
