Increase space above circular flow; remove Layers 4–1 sections as requested

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -254,7 +254,7 @@
             position: relative;
             width: 560px;
             height: 560px;
-            margin: -10px auto 10px; /* Pull section upward slightly */
+            margin: 18px auto 10px; /* Add room below title so it doesn't touch bubble 1 */
             border-radius: 50%;
             padding: 0;
         }
@@ -538,52 +538,7 @@
                 <div class="compare-note">Drag the slider or the handle to reveal more of each side.</div>
             </div>
 
-            <!-- Continue Architecture Layers -->
-            <div class="layer">
-                <div class="layer-header"><span class="layer-title">Layer 4: Specialized AI Agents</span><span class="layer-badge">Intelligence Layer</span></div>
-                <div class="agent-grid">
-                    <div class="agent-card"><div class="agent-icon">💰</div><div class="agent-name">Cost Estimation Agent</div><ul class="agent-functions"><li>Parametric cost modeling</li><li>WBS analysis</li><li>Confidence intervals</li></ul></div>
-                    <div class="agent-card"><div class="agent-icon">⚠️</div><div class="agent-name">Risk Assessment Agent</div><ul class="agent-functions"><li>Risk identification</li><li>Impact quantification</li><li>Mitigation strategies</li></ul></div>
-                    <div class="agent-card"><div class="agent-icon">🎯</div><div class="agent-name">Budget Optimization Agent</div><ul class="agent-functions"><li>Resource allocation</li><li>Trade-off analysis</li><li>Cost reduction</li></ul></div>
-                    <div class="agent-card"><div class="agent-icon">🛒</div><div class="agent-name">Procurement Planning Agent</div><ul class="agent-functions"><li>Vendor analysis</li><li>Contract optimization</li><li>Supply chain monitoring</li></ul></div>
-                    <div class="agent-card"><div class="agent-icon">📅</div><div class="agent-name">Timeline & Resource Agent</div><ul class="agent-functions"><li>Schedule alignment</li><li>Cash flow forecasting</li><li>Resource utilization</li></ul></div>
-                    <div class="agent-card"><div class="agent-icon">✅</div><div class="agent-name">Compliance Agent</div><ul class="agent-functions"><li>Regulatory tracking</li><li>Audit preparation</li><li>Policy enforcement</li></ul></div>
-                    <div class="agent-card"><div class="agent-icon">🔮</div><div class="agent-name">Scenario Analysis Agent</div><ul class="agent-functions"><li>What-if analysis</li><li>Contingency planning</li><li>Sensitivity testing</li></ul></div>
-                </div>
-            </div>
-
-            <!-- Layer 3: Agent Orchestration -->
-            <div class="layer">
-                <div class="layer-header"><span class="layer-title">Layer 3: Agent Orchestration</span><span class="layer-badge">Coordination</span></div>
-                <div class="components">
-                    <div class="component"><div class="component-icon">🎭</div><div class="component-name">Central Coordinator</div><div class="component-desc">Master agent orchestration</div></div>
-                    <div class="component"><div class="component-icon">📋</div><div class="component-name">Task Allocation</div><div class="component-desc">Dynamic work distribution</div></div>
-                    <div class="component"><div class="component-icon">🔄</div><div class="component-name">Communication Protocol</div><div class="component-desc">Inter-agent messaging</div></div>
-                    <div class="component"><div class="component-icon">🤝</div><div class="component-name">Consensus Engine</div><div class="component-desc">Decision reconciliation</div></div>
-                </div>
-            </div>
-
-            <!-- Layer 2: Knowledge Base -->
-            <div class="layer">
-                <div class="layer-header"><span class="layer-title">Layer 2: Knowledge Base</span><span class="layer-badge">Intelligence Repository</span></div>
-                <div class="components">
-                    <div class="component"><div class="component-icon">📚</div><div class="component-name">Cost Models</div><div class="component-desc">Historical mission templates</div></div>
-                    <div class="component"><div class="component-icon">🎲</div><div class="component-name">Risk Frameworks</div><div class="component-desc">Risk assessment methodologies</div></div>
-                    <div class="component"><div class="component-icon">📏</div><div class="component-name">Industry Benchmarks</div><div class="component-desc">Performance standards</div></div>
-                    <div class="component"><div class="component-icon">📜</div><div class="component-name">Regulations</div><div class="component-desc">Compliance requirements</div></div>
-                </div>
-            </div>
-
-            <!-- Layer 1: Data Ingestion -->
-            <div class="layer">
-                <div class="layer-header"><span class="layer-title">Layer 1: Data Ingestion & Processing</span><span class="layer-badge">Foundation</span></div>
-                <div class="components">
-                    <div class="component"><div class="component-icon">🗄️</div><div class="component-name">Historical Data</div><div class="component-desc">Past mission archives</div></div>
-                    <div class="component"><div class="component-icon">⚡</div><div class="component-name">Real-time Tracking</div><div class="component-desc">Live cost monitoring</div></div>
-                    <div class="component"><div class="component-icon">🌍</div><div class="component-name">External Data</div><div class="component-desc">Market & economic data</div></div>
-                    <div class="component"><div class="component-icon">👥</div><div class="component-name">Vendor Systems</div><div class="component-desc">Supplier information</div></div>
-                </div>
-            </div>
+            
         </div>
         
 
