--- a/Aiposter.html
+++ b/Aiposter.html
@@ -542,87 +542,13 @@
         </div>
         
 
-    <!-- Key Performance Metrics -->
-    <div class="metrics-dashboard">
-            <div class="metric-card"><div class="metric-value">±5%</div><div class="metric-label">Cost Estimation Accuracy</div></div>
-            <div class="metric-card"><div class="metric-value">15%</div><div class="metric-label">Average Budget Savings</div></div>
-            <div class="metric-card"><div class="metric-value">85%</div><div class="metric-label">Risk Prediction Accuracy</div></div>
-            <div class="metric-card"><div class="metric-value">&lt;2s</div><div class="metric-label">Query Response Time</div></div>
-            <div class="metric-card"><div class="metric-value">99.9%</div><div class="metric-label">System Availability</div></div>
-            <div class="metric-card"><div class="metric-value">24/7</div><div class="metric-label">Autonomous Monitoring</div></div>
-        </div>
-
-        <!-- Interactive Charts -->
-        <div class="chart-container">
-            <h2>Cost Breakdown Over Mission Phases</h2>
-            <canvas id="costChart" style="height:220px;"></canvas>
-        </div>
-        <div class="chart-container">
-            <h2>Timeline & Cash Flow</h2>
-            <canvas id="timelineChart" style="height:220px;"></canvas>
-        </div>
+    
 
     </div>
 
     <!-- Chart.js Script -->
     <script>
-    async function loadCharts() {
-        // Placeholder JSON until backend is ready
-        const data = {
-            cost_breakdown: { "Design": 20, "Launch": 40, "Operations": 30, "Contingency": 10 },
-            timeline_cashflow: { "Month 1": 5, "Month 2": 10, "Month 3": 8, "Month 4": 12, "Month 5": 6 }
-        };
-
-        // --- Cost Breakdown Chart (doughnut) ---
-        const costCtx = document.getElementById('costChart').getContext('2d');
-        new Chart(costCtx, {
-            type: 'doughnut',
-            data: {
-                labels: Object.keys(data.cost_breakdown),
-                datasets: [{
-                    data: Object.values(data.cost_breakdown),
-                    backgroundColor: ['#001454', '#0a3c86', '#002366', '#a3c2ff'],
-                    borderColor: '#ffffff',
-                    borderWidth: 2
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: true,
-                plugins: {
-                    legend: { position: 'bottom', labels: { color: '#222222', font: { family: "'Calibri', Arial, sans-serif" } } }
-                }
-            }
-        });
-
-        // --- Timeline & Cash Flow Chart (bar) ---
-        const timelineCtx = document.getElementById('timelineChart').getContext('2d');
-        new Chart(timelineCtx, {
-            type: 'bar',
-            data: {
-                labels: Object.keys(data.timeline_cashflow),
-                datasets: [{
-                    label: 'Cash Flow',
-                    data: Object.values(data.timeline_cashflow),
-                    backgroundColor: '#0a3c86',
-                    borderRadius: 6,
-                    borderColor: '#001454',
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: true,
-                scales: {
-                    x: { ticks: { color: '#222222', font: { family: "'Calibri', Arial, sans-serif" } }, grid: { color: '#e0e0e0' } },
-                    y: { beginAtZero: true, ticks: { color: '#222222', font: { family: "'Calibri', Arial, sans-serif" } }, grid: { color: '#e0e0e0' } }
-                },
-                plugins: { legend: { display: false } }
-            }
-        });
-    }
-
-    document.addEventListener('DOMContentLoaded', loadCharts);
+    // Charts removed per user request
 
     // Comparison slider logic
     document.addEventListener('DOMContentLoaded', () => {
