Add more vertical space above circular flow to prevent overlap with first bubble

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -254,7 +254,7 @@
             position: relative;
             width: 560px;
             height: 560px;
-            margin: 18px auto 10px; /* Add room below title so it doesn't touch bubble 1 */
+            margin: 36px auto 10px; /* Extra room below title so it doesn't touch bubble 1 */
             border-radius: 50%;
             padding: 0;
         }
