Add footer with pixelated BUDGIE logo and tagline

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -546,6 +546,14 @@
 
     </div>
 
+    <!-- Footer with BUDGIE Logo -->
+    <div style="text-align:center; padding:40px 20px; background:linear-gradient(135deg, #f0f6ff, #ffffff); border-top:2px solid #e2e6ef;">
+        <img src="pixelated-budgie-logo.png" alt="BUDGIE Logo" style="width:80px; height:80px; margin-bottom:16px;">
+        <p style="font-size:1.2rem; color:var(--isu-blue); font-weight:600; margin:0;">
+            <strong>BUDGIE</strong> — your smart companion for space missions
+        </p>
+    </div>
+
     <!-- Chart.js Script -->
     <script>
     // Charts removed per user request
