--- a/Aiposter.html
+++ b/Aiposter.html
@@ -548,8 +548,8 @@
 
     <!-- Footer with BUDGIE Logo -->
     <div style="text-align:center; padding:40px 20px; background:linear-gradient(135deg, #f0f6ff, #ffffff); border-top:2px solid #e2e6ef; position:relative;">
-        <img src="pixelated-budgie-logo.png" alt="BUDGIE Logo" style="width:120px; height:120px; margin-bottom:16px;">
-        <div style="position:relative; display:inline-block; margin-left:140px; margin-top:-80px;">
+        <img src="pixelated-budgie-logo.png" alt="BUDGIE Logo" style="width:120px; height:120px; margin-bottom:16px; transform:rotate(180deg);">
+        <div style="position:relative; display:inline-block; margin-left:20px; margin-top:-80px;">
             <div style="background:#fff; border:2px solid var(--isu-blue); border-radius:20px; padding:12px 20px; box-shadow:0 4px 12px rgba(0,20,84,0.15); position:relative;">
                 <p style="font-size:1.1rem; color:var(--isu-blue); font-weight:600; margin:0;">
                     <strong>BUDGIE</strong> your smart companion for space missions
