Add team member names in small bubble at bottom of footer

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -559,6 +559,13 @@
                 <div style="position:absolute; left:-9px; top:50%; transform:translateY(-50%); width:0; height:0; border-top:9px solid transparent; border-bottom:9px solid transparent; border-right:10px solid #fff;"></div>
             </div>
         </div>
+        
+        <!-- Team names -->
+        <div style="margin-top:60px; padding:10px 20px; background:#fff; border:1px solid #ddd; border-radius:12px; display:inline-block; box-shadow:0 2px 8px rgba(0,20,84,0.08);">
+            <p style="font-size:0.85rem; color:#555; margin:0; font-style:italic;">
+                Darius Dantzler, Nikola Mazzarella, Robert Nagy, Avani Sharan, Venkata Sri Varshini Budi
+            </p>
+        </div>
     </div>
 
     <!-- Chart.js Script -->
