Move team names to separate section below BUDGIE footer

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -558,13 +558,15 @@
                 <div style="position:absolute; left:-12px; top:50%; transform:translateY(-50%); width:0; height:0; border-top:10px solid transparent; border-bottom:10px solid transparent; border-right:12px solid var(--isu-blue);"></div>
                 <div style="position:absolute; left:-9px; top:50%; transform:translateY(-50%); width:0; height:0; border-top:9px solid transparent; border-bottom:9px solid transparent; border-right:10px solid #fff;"></div>
             </div>
-            
-            <!-- Team names below speech bubble -->
-            <div style="margin-top:20px; padding:10px 20px; background:#fff; border:1px solid #ddd; border-radius:12px; box-shadow:0 2px 8px rgba(0,20,84,0.08);">
-                <p style="font-size:0.85rem; color:#555; margin:0; font-style:italic;">
-                    Darius Dantzler, Nikola Mazzarella, Robert Nagy, Avani Sharan, Venkata Sri Varshini Budi
-                </p>
-            </div>
+        </div>
+    </div>
+    
+    <!-- Team Credits Section -->
+    <div style="text-align:center; padding:20px; background:#f9fafb;">
+        <div style="display:inline-block; padding:10px 20px; background:#fff; border:1px solid #ddd; border-radius:12px; box-shadow:0 2px 8px rgba(0,20,84,0.08);">
+            <p style="font-size:0.85rem; color:#555; margin:0; font-style:italic;">
+                Darius Dantzler, Nikola Mazzarella, Robert Nagy, Avani Sharan, Venkata Sri Varshini Budi
+            </p>
         </div>
     </div>
 
