--- a/Aiposter.html
+++ b/Aiposter.html
@@ -26,6 +26,12 @@
             font-family: var(--body-font);
             color: var(--text-color);
             background-color: var(--light-bg);
+            background-image: 
+                linear-gradient(135deg, rgba(0, 20, 80, 0.5) 0%, rgba(5, 35, 90, 0.5) 40%, rgba(15, 50, 110, 0.5) 100%),
+                url('pexels-shashank-brahmavar-737732917-18507019.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center;
             line-height: 1.6;
         }
         
