Wrap BUDGIE In Action in flow-diagram card container for consistent styling

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -499,15 +499,16 @@
             </div>
         </div>
 
+        <!-- BUDGIE In Action -->
+        <div class="flow-diagram">
+            <h2 class="flow-title">BUDGIE In Action</h2>
+            <div class="layer-media">
+                <img src="BUDGIE_AI_screen_rec_GIFd.gif" alt="BUDGIE in action screen recording" class="layer-media-img">
+            </div>
+        </div>
+
         <!-- Architecture Layers -->
         <div class="architecture-container">
-            <!-- BUDGIE In Action (formerly Layer 5: Interface & Reporting) -->
-            <div class="layer">
-                <div class="layer-header centered"><span class="layer-title">BUDGIE In Action</span></div>
-                <div class="layer-media">
-                    <img src="BUDGIE_AI_screen_rec_GIFd.gif" alt="BUDGIE in action screen recording" class="layer-media-img">
-                </div>
-            </div>
 
             <!-- Layer 4: Specialized AI Agents -->
             
