Wrap footer and team credits in aligned card container

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -557,10 +557,10 @@
 
     </div>
 
-    <!-- Footer with BUDGIE Logo -->
-    <div style="text-align:center; padding:40px 20px; background:linear-gradient(135deg, #f0f6ff, #ffffff); border-top:2px solid #e2e6ef; position:relative;">
-        <img src="pixelated-budgie-logo.png" alt="BUDGIE Logo" style="width:120px; height:120px; margin-bottom:16px; transform:scaleX(-1); position:relative; top:96px; left:48px;">
-        <div style="position:relative; display:inline-block; margin-left:20px; margin-top:-80px;">
+    <!-- Footer with BUDGIE Logo and Team Credits -->
+    <div style="background:var(--white); border-radius:14px; padding:30px 20px; margin:28px auto; box-shadow:var(--card-shadow); max-width:1200px; text-align:center;">
+        <div style="display:flex; align-items:center; justify-content:center; gap:24px; margin-bottom:20px;">
+            <img src="pixelated-budgie-logo.png" alt="BUDGIE Logo" style="width:120px; height:120px; transform:scaleX(-1);">
             <div style="background:#fff; border:2px solid var(--isu-blue); border-radius:20px; padding:12px 20px; box-shadow:0 4px 12px rgba(0,20,84,0.15); position:relative;">
                 <p style="font-size:1.1rem; color:var(--isu-blue); font-weight:600; margin:0;">
                     <strong>BUDGIE</strong> your smart companion for space missions
@@ -570,12 +570,8 @@
                 <div style="position:absolute; left:-9px; top:50%; transform:translateY(-50%); width:0; height:0; border-top:9px solid transparent; border-bottom:9px solid transparent; border-right:10px solid #fff;"></div>
             </div>
         </div>
-    </div>
-    
-    <!-- Team Credits Section -->
-    <div style="text-align:center; padding:20px; background:#f9fafb;">
-        <div style="display:inline-block; padding:10px 20px; background:#fff; border:1px solid #ddd; border-radius:12px; box-shadow:0 2px 8px rgba(0,20,84,0.08);">
-            <p style="font-size:0.85rem; color:#555; margin:0; font-style:italic;">
+        <div style="padding:12px 20px; background:linear-gradient(135deg, #f0f6ff, #ffffff); border:1px solid #e2e6ef; border-radius:12px; display:inline-block;">
+            <p style="font-size:0.9rem; color:#555; margin:0; font-style:italic;">
                 Darius Dantzler, Nikola Mazzarella, Robert Nagy, Avani Sharan, Venkata Sri Varshini Budi
             </p>
         </div>
