Update comparison subtitle to reference ChatGPT and BUDGIE explicitly

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -522,7 +522,7 @@
         <!-- Comparison: ChatGPT vs. BUDGIE -->
         <div class="comparison-section" id="comparison">
             <h2 class="comparison-header">ChatGPT vs. BUDGIE</h2>
-            <p class="comparison-subtitle">Slide to compare generic conversational output with domain-focused, structured mission planning intelligence.</p>
+            <p class="comparison-subtitle">Slide to compare ChatGPT conversational output with BUDGIE mission planning intelligence.</p>
             <div class="compare-wrapper" id="compareWrapper" style="--pos:0%">
                 <div class="compare-pane left">
                     <div class="compare-title">ChatGPT Style Output</div>
