Update comparison title to include Flock-1 and highlight budget estimate

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -525,7 +525,10 @@
 
         <!-- Comparison: ChatGPT vs. BUDGIE -->
         <div class="comparison-section" id="comparison">
-            <h2 class="comparison-header">ChatGPT vs. BUDGIE</h2>
+            <h2 class="comparison-header">ChatGPT vs. BUDGIE: Budget Optimization for the Flock-1 Mission</h2>
+            <p style="text-align:center; font-size:0.95rem; color:#555; margin-bottom:12px;">
+                <strong>Flock-1 Mission Budget Estimate:</strong> <span style="color:var(--isu-blue); font-weight:700;">$150-200 million</span>
+            </p>
             <p class="comparison-subtitle">Slide to compare ChatGPT conversational output with BUDGIE mission planning intelligence.</p>
             <div class="compare-wrapper" id="compareWrapper" style="--pos:100%">
                 <div class="compare-pane left">
