Center compare-title text on both sides of slider

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -184,7 +184,7 @@
     .compare-pane { padding:18px; min-height:240px; }
     .compare-pane.left { background:#f5f9ff; }
     .compare-pane.right { background:#ffffff; }
-    .compare-title { font-weight:700; color: var(--isu-blue); margin-bottom:10px; font-size:1.05rem; }
+    .compare-title { font-weight:700; color: var(--isu-blue); margin-bottom:10px; font-size:1.05rem; text-align:center; }
     .compare-list { margin:0; padding-left:18px; color:#444; font-size:0.9rem; }
     .compare-list li { margin-bottom:6px; }
     .compare-handle { position:absolute; top:0; bottom:0; left:var(--pos); width:4px; background: linear-gradient(to bottom, #001454, #0a3c86); transform:translateX(-50%); cursor: ew-resize; }
