Simplify comparison titles to 'ChatGPT Output' and 'BUDGIE Output'

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -531,7 +531,7 @@
             </p>
             <div class="compare-wrapper" id="compareWrapper" style="--pos:100%">
                 <div class="compare-pane left">
-                    <div class="compare-title">ChatGPT Style Output</div>
+                    <div class="compare-title">ChatGPT Output</div>
                     <div class="metrics-bubbles">
                         <div class="metric-bubble"><span class="metric-label">Estimated Total Cost</span><span class="metric-value">$130,000,000</span></div>
                         <div class="metric-bubble"><span class="metric-label">Risk Score</span><span class="metric-value">62/100</span></div>
@@ -540,7 +540,7 @@
                     </div>
                 </div>
                 <div class="compare-pane right">
-                    <div class="compare-title">BUDGIE Structured Output</div>
+                    <div class="compare-title">BUDGIE Output</div>
                     <div class="metrics-bubbles">
                         <div class="metric-bubble"><span class="metric-label">Estimated Total Cost</span><span class="metric-value">$154,000,000</span></div>
                         <div class="metric-bubble"><span class="metric-label">Risk Score</span><span class="metric-value">35.5/100</span></div>
